# crabriscv

./: LICENSE  README.md  a.out  output.hex
hdl/: a.out  addi.txt  alu.sv  branch_unit.sv  crabcore.sv  load_unit.sv  loopstartup.hex  membus.sv  memory.sv  memorywrapper.sv  output.hex  segment7.v  timer.v  vars.vcd
src/: Cargo.toml  memory.x  output.hex
src/.cargo/: config
src/src/: main.rs
