[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = { git = "https://github.com/Marcuss2/riscv-rt" } 

[profile.release]
opt-level = "s"
lto = true
debug = true

[profile.dev]
lto = true
